--- a/SecurityLab/SecurityLab/appsettings.json
+++ b/SecurityLab/SecurityLab/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=USER-PC\\SQLEXPRESS;Database=SecurityLabDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=*;Database=SecurityLabDB;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
