--- a/NotesApp/NotesApp/NotesApp/NotesApp.csproj
+++ b/NotesApp/NotesApp/NotesApp/NotesApp.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NotesApp.Helpers\NotesApp.Helpers.csproj" />
+  </ItemGroup>
+
 </Project>
