--- a/NotesApp/NotesApp/NotesApp/appsettings.json
+++ b/NotesApp/NotesApp/NotesApp/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "ConnectionString": "Server=.;Database=NotesAppDatabase;Trusted_Connection=True;TrustServerCertificate=True",
+    "BackUpConnectionString": "Server=dfshdsahds;Database=bilokoja;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
