--- a/NotesApp/NotesApp/NotesApp.Services/NotesApp.Services.csproj
+++ b/NotesApp/NotesApp/NotesApp.Services/NotesApp.Services.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="XAct.Core.PCL" Version="0.0.5014" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NotesApp.DataAccess\NotesApp.DataAccess.csproj" />
     <ProjectReference Include="..\NotesApp.Dtos\NotesApp.Dtos.csproj" />
     <ProjectReference Include="..\NotesApp.Mappers\NotesApp.Mappers.csproj" />
